[gd_scene load_steps=15 format=1]

[ext_resource path="res://conductor.gd" type="Script" id=1]
[ext_resource path="res://sprites/check.tex" type="Texture" id=2]
[ext_resource path="res://checkmaybe.gd" type="Script" id=3]
[ext_resource path="res://sprites/rail.tex" type="Texture" id=4]
[ext_resource path="res://sprites/miss.tex" type="Texture" id=5]
[ext_resource path="res://sprites/slime.tex" type="Texture" id=6]
[ext_resource path="res://clock.gd" type="Script" id=7]
[ext_resource path="res://songs/song1.ogg" type="AudioStream" id=8]
[ext_resource path="res://sprites/beat.png" type="Texture" id=9]
[ext_resource path="res://beat.gd" type="Script" id=10]
[ext_resource path="res://sprites/target.tex" type="Texture" id=11]

[sub_resource type="CanvasItemMaterial" id=3]

shader/shading_mode = 0

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]

resource/name = "New Anim"
length = 1.0
loop = false
step = 0.1

[node name="Node" type="Node"]

[node name="conductor" type="Node" parent="."]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="conductor"]

transform/scale = Vector2( 0.534926, 0.493365 )
texture = ExtResource( 2 )
script/script = ExtResource( 3 )

[node name="enemyHP0" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 124.0
margin/top = 13.0
margin/right = 228.0
margin/bottom = 81.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="enemyHP1" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 248.0
margin/top = 15.0
margin/right = 352.0
margin/bottom = 83.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="enemyHP2" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 111.0
margin/top = 108.0
margin/right = 215.0
margin/bottom = 176.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="enemyHP3" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 283.0
margin/top = 95.0
margin/right = 387.0
margin/bottom = 163.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="playerHP" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 737.0
margin/top = 20.0
margin/right = 841.0
margin/bottom = 88.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="timerLabel" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 3.0
margin/right = 99.0
margin/bottom = 75.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="damageLabel" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 203.0
margin/top = 140.0
margin/right = 345.0
margin/bottom = 256.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="neutralLabel" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 288.0
margin/top = 184.0
margin/right = 484.0
margin/bottom = 295.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="targetLabel" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 536.0
margin/top = -2.0
margin/right = 649.0
margin/bottom = 103.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="topRail" type="Sprite" parent="conductor"]

transform/pos = Vector2( 641, 508 )
texture = ExtResource( 4 )

[node name="bottomRail" type="Sprite" parent="conductor"]

transform/pos = Vector2( 641, 571 )
texture = ExtResource( 4 )

[node name="check" type="Sprite" parent="conductor"]

visibility/visible = false
transform/pos = Vector2( 915.135, 402.138 )
texture = ExtResource( 2 )

[node name="wrong" type="Sprite" parent="conductor"]

visibility/visible = false
transform/pos = Vector2( 937.566, 416.026 )
texture = ExtResource( 5 )

[node name="enemySprite0" type="Sprite" parent="conductor"]

transform/pos = Vector2( 128.174, 381.569 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="enemySprite1" type="Sprite" parent="conductor"]

transform/pos = Vector2( 269.872, 380.319 )
transform/scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 6 )

[node name="enemySprite2" type="Sprite" parent="conductor"]

transform/pos = Vector2( 372.308, 453.539 )
transform/rot = -180.0
transform/scale = Vector2( 104.029, 108.909 )

[node name="enemySprite3" type="Sprite" parent="conductor"]

transform/pos = Vector2( 522.208, 453.539 )
transform/rot = -180.0
transform/scale = Vector2( 104.029, 108.909 )

[node name="clock" type="Node" parent="conductor"]

script/script = ExtResource( 7 )

[node name="streamPlayer" type="StreamPlayer" parent="conductor/clock"]

stream/stream = ExtResource( 8 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="beat" type="Node2D" parent="conductor"]

material/material = SubResource( 3 )
transform/pos = Vector2( 48.4353, 541.139 )
transform/scale = Vector2( 0.578125, 1.04687 )

[node name="beatInfo" type="Panel" parent="conductor/beat"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1347.0
margin/top = -507.0
margin/right = 1673.0
margin/bottom = -298.0

[node name="beatInfoLabel" type="Label" parent="conductor/beat/beatInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 67.0
margin/bottom = 18.0
text = "Speed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beatInfoLabel5" type="Label" parent="conductor/beat/beatInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 190.0
margin/top = 0.0
margin/right = 257.0
margin/bottom = 18.0
text = "Speed"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beatInfoLabel1" type="Label" parent="conductor/beat/beatInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 22.0
margin/right = 80.0
margin/bottom = 41.0
text = "Current Beat Song Pos"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beatInfoLabel4" type="Label" parent="conductor/beat/beatInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 187.0
margin/top = 22.0
margin/right = 328.0
margin/bottom = 41.0
text = "Current Beat Song Pos"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beatInfoLabel2" type="Label" parent="conductor/beat/beatInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1.0
margin/top = 40.0
margin/right = 142.0
margin/bottom = 59.0
text = "Current Beat Pos"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beatInfoLabel3" type="Label" parent="conductor/beat/beatInfo"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 185.0
margin/top = 40.0
margin/right = 326.0
margin/bottom = 59.0
text = "Current Beat Pos"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="beatSprite" type="Sprite" parent="conductor/beat"]

transform/scale = Vector2( 0.925278, 0.471276 )
texture = ExtResource( 9 )
script/script = ExtResource( 10 )

[node name="beatLabel" type="Label" parent="conductor/beat/beatSprite"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -21.0
margin/top = -112.0
margin/right = 113.0
margin/bottom = -43.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="secondspassed" type="Label" parent="conductor"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 347.0
margin/top = 201.0
margin/right = 575.0
margin/bottom = 290.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimatedSprite" type="AnimatedSprite" parent="conductor"]

transform/pos = Vector2( 59.2511, 150.761 )
transform/scale = Vector2( 0.511202, 0.531356 )
frames = SubResource( 1 )
animation = "default"

[node name="song" type="Node2D" parent="."]

transform/pos = Vector2( 95, 125 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 960.355, 537.799 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/New Anim" = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""


